code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_60.wast
(assert_invalid
  (module (func $type-then-break-last-void-vs-num (result i32)
    (if (result i32) (i32.const 1) (then (br 0)) (else (i32.const 1)))
  ))
  "type mismatch"
)